<resources>

    <string name="share_title">Поделиться</string>
    <string name="share_dialog_title">Поделиться фотографией</string>

    <string name="repeat">Повторить</string>

    <string name="fingerprint_title">Вход в приложение</string>
    <string name="fingerprint_message">Сканируйте свой отпечаток пальца</string>
    <string name="fingerprint_message_error">Совпадений не найдено</string>
    <string name="fingerprint_message_success">Совпадение найдено</string>
    <string name="fingerprint_cancel_button">Отмена</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="on_boarding_skip">Skip</string>
    <string name="on_boarding_next">Next</string>
    <string name="on_boarding_title_1">Canned reply templates</string>
    <string name="on_boarding_description_1">Save your time and use quick access to your permanent phrases</string>
    <string name="on_boarding_title_2">Type phrases with a tap</string>
    <string name="on_boarding_description_2">Do not waste time on a set of long phrases and type them 1 click</string>
    <string name="on_boarding_title_3">Quick import phones</string>
    <string name="on_boarding_description_3">Keep your contacts handy</string>

</resources>
