<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numPadButton1"
        style="@style/NumPadButton"
        android:text="@string/one"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/numPadButton2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numPadButton2"
        style="@style/NumPadButton"
        android:text="@string/two"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/numPadButton1"
        app:layout_constraintEnd_toStartOf="@id/numPadButton3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numPadButton3"
        style="@style/NumPadButton"
        android:text="@string/three"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/numPadButton2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numPadButton4"
        style="@style/NumPadButton"
        android:text="@string/four"
        app:layout_constraintTop_toBottomOf="@id/numPadButton1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/numPadButton5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numPadButton5"
        style="@style/NumPadButton"
        android:text="@string/five"
        app:layout_constraintTop_toBottomOf="@id/numPadButton2"
        app:layout_constraintStart_toEndOf="@id/numPadButton4"
        app:layout_constraintEnd_toStartOf="@id/numPadButton6" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numPadButton6"
        style="@style/NumPadButton"
        android:text="@string/six"
        app:layout_constraintTop_toBottomOf="@id/numPadButton3"
        app:layout_constraintStart_toEndOf="@id/numPadButton5"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numPadButton7"
        style="@style/NumPadButton"
        android:text="@string/seven"
        app:layout_constraintTop_toBottomOf="@id/numPadButton4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/numPadButton8" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numPadButton8"
        style="@style/NumPadButton"
        android:text="@string/eight"
        app:layout_constraintTop_toBottomOf="@id/numPadButton5"
        app:layout_constraintStart_toEndOf="@id/numPadButton7"
        app:layout_constraintEnd_toStartOf="@id/numPadButton9" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numPadButton9"
        style="@style/NumPadButton"
        android:text="@string/nine"
        app:layout_constraintTop_toBottomOf="@id/numPadButton6"
        app:layout_constraintStart_toEndOf="@id/numPadButton8"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backspaceButton"
        style="@style/NumPadButton"
        android:padding="20dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_backspace"
        app:layout_constraintTop_toBottomOf="@id/numPadButton7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/numPadButton0"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numPadButton0"
        style="@style/NumPadButton"
        android:text="@string/zero"
        app:layout_constraintTop_toBottomOf="@id/numPadButton8"
        app:layout_constraintStart_toEndOf="@id/backspaceButton"
        app:layout_constraintEnd_toStartOf="@id/actionButton" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/actionButton"
        style="@style/NumPadButton"
        android:padding="16dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/numPadButton9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/numPadButton0"
        app:srcCompat="@drawable/ic_fingerprint"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>