<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/left_right_margin">

    <TextView
        android:id="@+id/fingerprintTitleView"
        style="@style/TextH6Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_title" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/fingerprintIconView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_fingerprint" />

        <TextView
            android:id="@+id/fingerprintMessageView"
            style="@style/TextBody1Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fingerprint_message" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fingerprintCancelButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_cancel_button" />
</LinearLayout>